# app

./: .gitmodules  FINAL_HACKATHON_GUIDE.md  HACKATHON_DEMO.md  HACKATHON_QUICK_REFERENCE.md  LIVE_TESTNET_DEMO.md  PERFORMANCE_OPTIMIZATION.md  PHALA_INTEGRATION.md  README.md  SP1_ZKVERIFY_INTEGRATION.md  SYSTEM_GUIDE.md  TESTNET_DEPLOYMENT_COMPLETE.md  UI_SETUP_GUIDE.md  ZKVERIFY_SETUP.md  config.env  demo-report.json  demo.js  deploy-holesky-live.sh  deployment.json  functional-demo.ts  generate-live-sp1-proof.sh  lifecycle.js  live-execution-demo.ts  package-lock.json  package.json  start-ui.sh  test-contract.js  testnet-config.env  testnet-live-demo.js  testnet.config.json  zkverify-hackathon-demo.js  zkverify-hackathon-live.ts  zkverify-hackathon-ready.ts
abis/: DarkCoWHook.json  OrderServiceManager.json
avs/cache/: solidity-files-cache.json
avs/contract/: foundry.toml  remappings.txt
dark-pool-ui/: README.md  package-lock.json  package.json  tailwind.config.js
dark-pool-ui/public/: index.html
dark-pool-ui/src/: App.css  App.tsx  index.css  react-app-env.d.ts
deploy/: deploy-testnet.sh  testnet-deployment.md
hook/: .gitmodules  README.md  foundry.toml  remappings.txt
hook/script/: HookDeployer.s.sol
hook/src/: DarkCoWHook.sol  (+2 more)
operator/: config.ts  createNewTasks.ts  index.ts  matching.ts  math.ts  prove-request-handler.ts  register.ts  utils.ts  zkverify-client.ts  zkverify-integration.test.ts  zkverify-operator.ts
order-engine/: .env.example  Cargo.toml  proof_zkverify.json
order-engine/server/: Cargo.toml
order-engine/server/src/: main.rs
(+53 files in other folders)
