[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum           = "0.7"
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
base64         = "0.22"
hex            = "0.4"            # ★ decode 0x-prefixed hex
once_cell      = "1"
anyhow         = "1"
tracing = "0.1.40"


# Succinct SP1 SDK
sp1-sdk = "5.0.0"

# Fibonacci lib
fibonacci-lib = { path = "../lib" }
bincode = "2.0.1"

[build-dependencies]
sp1-build = "5.0.0"
